Fixed up text spacing.

--- a/scss/_main/_base.scss
+++ b/scss/_main/_base.scss
@@ -36,33 +36,41 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   line-height: 1.111111111;
-  margin-bottom: 1.6rem;
-  @include respond-to(widescreens_and_tablets) {
+  margin: 0 0 1rem;
+  @include respond-to(tablets) {
+    font-size: 2.5rem;
+  }
+  @include respond-to(widescreens) {
     font-size: 3rem;
   }
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   line-height: 1.3;
-  margin-bottom: 1.5rem;
-  @include respond-to(widescreens_and_tablets) {
+  margin: 0 0 1rem;
+  @include respond-to(tablets) {
+    font-size: 1.5rem;
+  }
+  @include respond-to(widescreens) {
     font-size: 2rem;
   }
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   line-height: 1.3;
   font-weight: 500;
-  margin-bottom: 1.5rem;
+  margin: 1rem 0;
+  @include respond-to(widescreens) {
+    font-size: 1.5rem;
+  }
 }
 
 h4 {
   font-size: 1rem;
-  margin-bottom: 0.5rem;
 }
 
 
